@@ -1,3 +1,12 @@
+Wed Dec 02 01:16:00 GMT 2009  Richard Boulton <richard@tartarus.org>
+
+	* xappy/cachemanager/generic.py,
+	  xappy/cachemanager/xapian_manager.py: Use the hash of query
+	  strings, rather than the raw strings, to avoid problems with key
+	  length limits in xapian.  Store the raw string additionally, so
+	  we can report a cache miss in the event of a collision, and so we
+	  can iterate through the stored query strings.
+
 Tue Dec 01 23:54:39 GMT 2009  Richard Boulton <richard@tartarus.org>
 
 	* xappy/query.py,xappy/unittests/query_serialise.py: Improve
